--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,6 +8,9 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+resources.view.doctype = "HTML5"
+
 [staging : production]
 
 [testing : production]
@@ -18,3 +21,8 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+resources.db.adapter = PDO_MYSQL
+resources.db.params.host = localhost
+resources.db.params.username = root
+resources.db.params.password = 
+resources.db.params.dbname = stm
