added signup store passwords hash-salted

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -26,3 +26,4 @@ resources.db.params.host = localhost
 resources.db.params.username = root
 resources.db.params.password = 
 resources.db.params.dbname = stm
+hashsalt = some very salty salt
